# vk_api_cpp

./: CMakeLists.txt  README.md
cpp/: ActionInterface.hpp  VKApiClient.cpp  VKApiClient.hpp  VKApiRequest.cpp  VKApiRequest.hpp
cpp/Actions/: Account.cpp  Account.hpp  Ads.cpp  Ads.hpp  AppWidgets.cpp  AppWidgets.hpp  Apps.cpp  Apps.hpp  Audio.cpp  Audio.hpp  Auth.cpp  Auth.hpp  Board.cpp  Board.hpp  Bugtracker.cpp  Bugtracker.hpp  Calls.cpp  Calls.hpp  Database.cpp  Database.hpp  Docs.cpp  Docs.hpp  Donut.cpp  Donut.hpp  DownloadedGames.cpp  DownloadedGames.hpp  Execute.cpp  Execute.hpp  Fave.cpp  Fave.hpp  Friends.cpp  Friends.hpp  Gifts.cpp  Gifts.hpp  Groups.cpp  Groups.hpp  LeadForms.cpp  LeadForms.hpp  Likes.cpp  Likes.hpp  (+50 more)
cpp/CallbackApi/: VKCallbackApiHandler.cpp  VKCallbackApiHandler.hpp  VKCallbackApiLongPollExecutor.cpp  VKCallbackApiLongPollExecutor.hpp  VKCallbackApiServerHandler.cpp  VKCallbackApiServerHandler.hpp
cpp/Enums/: VKEnums.cpp  VKEnums.hpp  VKLanguage.cpp  VKLanguage.hpp
cpp/Exceptions/: VKApiExceptions.hpp  VKExceptions.hpp  VKLongPollExceptions.hpp
cpp/OAuth/: AbstractOAuth.cpp  AbstractOAuth.hpp  GroupOAuth.cpp  GroupOAuth.hpp  GroupScopes.cpp  GroupScopes.hpp  README.md  ResponseType.cpp  ResponseType.hpp  UserOAuth.cpp  UserOAuth.hpp  UserScopes.cpp  UserScopes.hpp
